Add in-process plugin registry
